合併登入系統

--- a/Swallab/backstage/set_time.html
+++ b/Swallab/backstage/set_time.html
@@ -21,7 +21,8 @@
                 <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
 
-            <div class="ms-3 me-5 col-1">
+            <div class="ms-3 me-5 col-1 d-flex text-nowrap">
+                <h5 id="userName"></h5>
                 <a href="#" class="">
                     <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
