刪除行內樣式

--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -103,10 +103,7 @@
                 </form>
                 <!-- 登入及註冊按鈕 -->
                 <div class="ms-3 me-5 col-1 d-flex text-nowrap">
-                    <h5 id="userName" style="padding: 4px 20px;
-                    margin: 0;
-                    font-weight: bold;
-                    color: #8B4513;"></h5>
+                    <h5 id="userName"></h5>
                     <a href="#" class="">
                         <button id="login" class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
                         <button id="logout" class="d-none btn btn-sm btnLogin text-nowrap">登出</button>
