--- a/Swallab/myHistory/myHistory_React_final.html
+++ b/Swallab/myHistory/myHistory_React_final.html
@@ -201,6 +201,12 @@
     <!-- React -->
 
     <!-- mockData ok -->
+
+    <!-- <script type="module">
+        import {MemberActivity} from '../js/myHistory_componentStructure.js';
+        ReactDOM.createRoot(document.getElementById('root')).render(React.createElement(MemberActivity));
+    </script> -->
+
     <script type="text/babel">
         //         // 載入 nav
         // $(document).ready(function () {
