correct API -> localhost

--- a/Swallab/myHistory/myHistory_React_final.html
+++ b/Swallab/myHistory/myHistory_React_final.html
@@ -300,7 +300,7 @@
         // };
 
         const { useState, useEffect, useRef } = React;
-        const API_BASE_URL = 'http://localhost:8000/api/member-activity';
+        const API_BASE_URL = 'http://localhost/api/member-activity';
 
         function MemberActivity() {
             const [activeTab, setActiveTab] = useState('all');
