--- a/myHistory/myHistory_React_final.html
+++ b/myHistory/myHistory_React_final.html
@@ -294,7 +294,7 @@
         // };
 
         const { useState, useEffect, useRef } = React;
-        const API_BASE_URL = 'http://localhost:8000/api/member-activity';
+        const API_BASE_URL = 'http://localhost/MySwallab/public/api/member-activity';
 
         function MemberActivity() {
             const [activeTab, setActiveTab] = useState('all');
